--- a/MorseRSDK/.gitignore
+++ b/MorseRSDK/.gitignore
@@ -1,3 +1,7 @@
+target/
+Cargo.lock
+rp-hal/
+
 # Prerequisites
 *.d
 
@@ -35,6 +39,11 @@
 *.i*86
 *.x86_64
 *.hex
+*.bin
+*.hex
+*.uf2
+
+*.dis
 
 # Debug files
 *.dSYM/
@@ -50,3 +59,5 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+
