--- a/MorseRSDK/.gitignore
+++ b/MorseRSDK/.gitignore
@@ -1,6 +1,8 @@
 target/
 Cargo.lock
 rp-hal/
+info
+
 
 # Prerequisites
 *.d
@@ -59,5 +61,3 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
-
-
